--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <section id="Me">
-        <img src="C:\Users\ADMIN\Desktop\Portfolio\M.jpg" style="width: 75%; max-width: 300px;">
+        <img src="https://github.com/Fuck-dragon/Portfolio/edit/main/index.html/M.jpg" style="width: 75%; max-width: 300px;">
     </section>
 
     <section id="projects">
@@ -32,13 +32,13 @@
             <div class="project-card">
                 <h3>Project One</h3>
                 <p>A brief description of what this project does and the tech used.</p>
-                <img src="C:\Users\ADMIN\Desktop\Portfolio\1.png" style="width: 75%; max-width: 300px;">
-                <img src="C:\Users\ADMIN\Desktop\Portfolio\2.png" style="width: 75%; max-width: 300px;">
-                <img src="C:\Users\ADMIN\Desktop\Portfolio\3.png" style="width: 75%; max-width: 300px;">
-                <img src="C:\Users\ADMIN\Desktop\Portfolio\4.png" style="width: 75%; max-width: 300px;">
-                <img src="C:\Users\ADMIN\Desktop\Portfolio\5.png" style="width: 75%; max-width: 300px;">
-                <img src="C:\Users\ADMIN\Desktop\Portfolio\6.png" style="width: 75%; max-width: 300px;">
-                <img src="C:\Users\ADMIN\Desktop\Portfolio\7.png" style="width: 75%; max-width: 300px;">
+                <img src="https://github.com/Fuck-dragon/Portfolio/edit/main/index.html/1.png" style="width: 75%; max-width: 300px;">
+                <img src="https://github.com/Fuck-dragon/Portfolio/edit/main/index.html/2.png" style="width: 75%; max-width: 300px;">
+                <img src="https://github.com/Fuck-dragon/Portfolio/edit/main/index.html/3.png" style="width: 75%; max-width: 300px;">
+                <img src="https://github.com/Fuck-dragon/Portfolio/edit/main/index.html/4.png" style="width: 75%; max-width: 300px;">
+                <img src="https://github.com/Fuck-dragon/Portfolio/edit/main/index.html/5.png" style="width: 75%; max-width: 300px;">
+                <img src="https://github.com/Fuck-dragon/Portfolio/edit/main/index.html/6.png" style="width: 75%; max-width: 300px;">
+                <img src="https://github.com/Fuck-dragon/Portfolio/edit/main/index.html/7.png" style="width: 75%; max-width: 300px;">
 
 
             </div>
@@ -54,3 +54,4 @@
     </footer>
 </body>
 </html>
+
