--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <section id="Me">
-        <img src="https://github.com/Fuck-dragon/Portfolio/edit/main/index.html/M.jpg" style="width: 75%; max-width: 300px;">
+        <img src="https://drive.google.com/file/d/1dxkW2LB8KhiyTenXk3Lbsw_LSJJT86Q9/view?usp=drive_link" style="width: 75%; max-width: 300px;">
     </section>
 
     <section id="projects">
@@ -32,13 +32,13 @@
             <div class="project-card">
                 <h3>Project One</h3>
                 <p>A brief description of what this project does and the tech used.</p>
-                <img src="https://github.com/Fuck-dragon/Portfolio/edit/main/index.html/1.png" style="width: 75%; max-width: 300px;">
-                <img src="https://github.com/Fuck-dragon/Portfolio/edit/main/index.html/2.png" style="width: 75%; max-width: 300px;">
-                <img src="https://github.com/Fuck-dragon/Portfolio/edit/main/index.html/3.png" style="width: 75%; max-width: 300px;">
-                <img src="https://github.com/Fuck-dragon/Portfolio/edit/main/index.html/4.png" style="width: 75%; max-width: 300px;">
-                <img src="https://github.com/Fuck-dragon/Portfolio/edit/main/index.html/5.png" style="width: 75%; max-width: 300px;">
-                <img src="https://github.com/Fuck-dragon/Portfolio/edit/main/index.html/6.png" style="width: 75%; max-width: 300px;">
-                <img src="https://github.com/Fuck-dragon/Portfolio/edit/main/index.html/7.png" style="width: 75%; max-width: 300px;">
+                <img src="https://drive.google.com/file/d/1KYlCdF5nPwE3Dw0JU-HI6C0eBRGhC1g6/view?usp=drive_link" style="width: 75%; max-width: 300px;">
+                <img src="https://drive.google.com/file/d/1PB9DPkJFqcwAWgp87rUopxDmw6X61Vt2/view?usp=drive_link" style="width: 75%; max-width: 300px;">
+                <img src="https://drive.google.com/file/d/1-Y-a0TKuOZGoU1nuU_IufbidnIZR_GD8/view?usp=drive_link" style="width: 75%; max-width: 300px;">
+                <img src="https://drive.google.com/file/d/1eRIwgPr_T_zmnsTO7KhY7ZFn3jX9fpgi/view?usp=drive_link" style="width: 75%; max-width: 300px;">
+                <img src="https://drive.google.com/file/d/1QeBtKSY__AixmJsxObEIyOmZurHb68tw/view?usp=drive_link" style="width: 75%; max-width: 300px;">
+                <img src="https://drive.google.com/file/d/1fHb6O9ygKwL0Qhw82ZXt_l5bXYCbDH90/view?usp=drive_link" style="width: 75%; max-width: 300px;">
+                <img src="https://drive.google.com/file/d/1EDwx4w5k8-ADkvHIXQ8flf3JSxNrkZNP/view?usp=drive_link" style="width: 75%; max-width: 300px;">
 
 
             </div>
@@ -54,4 +54,5 @@
     </footer>
 </body>
 </html>
+
 
